--- a/6meses_ana.html
+++ b/6meses_ana.html
@@ -73,7 +73,7 @@
   </div>
 
   <audio autoplay loop>
-    <source src="Leo Dan — Cómo Te Extraño Mi Amor [Letra + Video].mp3" type="audio/mpeg">
+    <source src="" type="audio/mpeg">
     Tu navegador no soporta la reproducción de audio.
   </audio>
 </body>
